# accounts

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/plugins/auth/: mod.rs  model.rs  routes.rs  types.rs
src/routes/: auth_routes.rs  mod.rs
src/utils/: db.rs  serializers.rs
