[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
mongodb = "2"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
paperclip = { version = "0.6", features = ["actix", "v3"] }
