[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2"
rust-argon2 = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
# HTTP Server
poem = "1.2"
# OpenAPI for poem
poem-openapi = { version = "1.2", features = ["swagger-ui", "bson"] }
# Asynchronous runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "parking_lot"] }
tracing-subscriber = "0.3.9"
